[gd_scene load_steps=5 format=3 uid="uid://cy3u4ql2cxgl5"]

[ext_resource type="Texture2D" uid="uid://c31k28651lu4s" path="res://graphics/enemies/scout.png" id="1_abboo"]
[ext_resource type="Script" path="res://scenes/enemies/scout.gd" id="1_m5qnl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_kgwtr"]
radius = 52.0096

[sub_resource type="CircleShape2D" id="CircleShape2D_f8v0o"]
radius = 1561.43

[node name="Scout" type="CharacterBody2D" groups=["Entity", "Scouts"]]
collision_layer = 2
collision_mask = 11
script = ExtResource("1_m5qnl")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(46, -4)
rotation = 1.5708
texture = ExtResource("1_abboo")
region_enabled = true
region_rect = Rect2(0, 0, 174, 223)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_kgwtr")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_f8v0o")

[node name="LaserShootingPositions" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="LaserShootingPositions"]
position = Vector2(119, -31)

[node name="Marker2D2" type="Marker2D" parent="LaserShootingPositions"]
position = Vector2(127, 11)

[node name="LaserTimer" type="Timer" parent="."]

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
